# Changelog

### Version 1.4.0
- All classes are now slotted.
- New improved Heartbeat Monitor.
    - If no data has been sent within the Heartbeat interval, the client will now send a Heartbeat to the server. - Thanks David Schneider.

### Version 1.3.4
- Dropped Python 3.2 Support.
- Fixed incorrect SSL warning when adding heartbeat or timeout to uri string (#18) - Thanks Adam Mills.

### Version 1.3.3
- Fixed bug causing messages without a body to not be consumed properly (#16) - Thanks Adam Mills.

### Version 1.3.2
- Fixed minor bug in the Poller error handling.
- Fixed issue where network corruption could caused a connection error to throw the wrong exception.

### Version 1.3.1
- Fixed SSL bug that could trigger an exception when running multiple threads (#14) - Thanks Adam Mills.
- Fixed bug when using channel.basic.get to retrieve large payloads.
- Reduced default RPC timeout from 360s to 120s.

### Version 1.3.0
- Removed noisy logging.
- Fixed Runtime exception caused by listener trying to join itself (#11) - Thanks ramonz.
- Channels are no longer closed after RabbitMQ throws a recoverable exception.
- Added Error mapping based on the AMQP 0.9.1 specifications (when applicable).
    Introduced three new variables to the AMQP-Storm Exceptions.
        - error_code: This provides HTTP style error codes based on the AMQP Specification.
        - error_type: This provides the full AMQP Error name; e.g. NO-ROUTE.
        - documentation: This provides the official AMQP Specification documentation string.

    These variables are available on all AMQP-Storm exceptions, but if no error code was
    provided by RabbitMQ, they will be empty.

    Usage:
        except AMQPChannelError as why:
            if why.error_code == 312:
                self.channel.queue.declare(queue_name)