@@ -1,6 +1,6 @@
 The MIT License (MIT)
 
-Copyright (c) 2014 Erik Olof Gunnar Andersson
+Copyright (c) 2014-2016 Erik Olof Gunnar Andersson
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
